# kudzu

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.txt  install.ps1
.github/workflows/: ci.yml
benches/: BASELINE.md  comparison.rs  search.rs  tree.rs
scripts/: bump-version
src/: app.rs  config.rs  event.rs  filetype.rs  lib.rs  main.rs  preview.rs  search.rs  tree.rs  ui.rs  watcher.rs
src/app/: input.rs  menu.rs  mod.rs  ops.rs  prompt.rs
