[package]
name = "kudzu"
version = "1.2.0"
edition = "2021"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
notify = "6"
notify-debouncer-full = "0.3"
crossbeam-channel = "0.5"
anyhow = "1"
nucleo = "0.5"
ignore = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "tree"
harness = false

[[bench]]
name = "search"
harness = false

[[bench]]
name = "comparison"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
